--- a/lib/view/index.html
+++ b/lib/view/index.html
@@ -9,13 +9,13 @@
 
 	<!-- Site Properities -->
 	<title>Ouyang's github</title>
-	<link rel="stylesheet" type="text/css" href="../../vendor/packaged/css/semantic.css">
-	<link rel="stylesheet" type="text/css" href="../css/home.css">
+	<link rel="stylesheet" type="text/css" href="../css/vendor/semantic.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/common/home.css">
 
-	<script type="text/javascript" src="../../vendor/jquery-1.10.2.js"></script>
+	<script type="text/javascript" src="../js/vendor/jquery-1.10.2.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.address/1.6/jquery.address.js"></script>
-	<script type="text/javascript" src="../../vendor/packaged/javascript/semantic.min.js"></script>
-	<script type="text/javascript" src="../js/home.js"></script>
+	<script type="text/javascript" src="../js/vendor/semantic.min.js"></script>
+	<script type="text/javascript" src="../js/common/home.js"></script>
 	
 	
 </head>
